--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -1,3 +1,153 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+}
+
+h1 {
+  font-family: 'Bruno Ace', sans-serif;
+  font-size: 4vh;
+  margin: 0;
+}
+
+h2 {
+  margin:0;
+  font-size: 3vh;
+}
+
+h3 {
+  margin:0;
+  font-size: 2vh;
+}
+
+p {
+  margin:0;
+  font-size: 1.5vh;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  padding: 0.5vh 1vw;
+  height: 6vh;
+}
+
+.navbar > a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  margin-left: 2.5vw;
+  font-size: 2.3vh;
+}
+
+.menu > a {
+  padding: 1vh 2.5vw;
+  text-decoration: none;
+  color: black;
+  text-align: center;
+}
+
+.menu > a:hover {
+  color: crimson;
+  cursor:pointer;
+}
+
+.menu > i {
+  display: none;
+}
+
+.menu > i:hover {
+  cursor:pointer;
+  color: crimson;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 7vh 0;
+  background-color: mediumaquamarine;
+  height: 30vh;
+}
+
+.main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-around;
+  position: fixed;
+  background-color: white;
+  top: 25vh;
+  left: 10vw;
+  width: 80vw;
+  height: 50vh;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 30vmin;
+  height: 30vmin;
+  padding: 2vmin 1vmin;
+  border-radius: 1vmax;
+}
+
+.card > i {
+  margin-bottom: 2vmin;
+}
+
+
+.card > h3 {
+  margin-top: 2vmin;
+}
+
+.card.merge {
+  background-color: coral;
+}
+
+.footer {
+  display: flex;
+  background-color: linen;
+  height: 65vh;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+@media (max-width: 700px) {
+  .navbar {
+    justify-content: space-between;
+  }
+  .menu > a {
+    display: none; 
+  }
+  .menu > i {
+    display: block;
+    margin-bottom: 2vh;
+  }
+  .menu.responsive {
+    flex-direction: column;
+    position: fixed;
+    top: 3.8vh;
+    right: 1vw;
+    align-items: flex-end;
+  }
+  .menu.responsive > a {
+    display: block;
+    text-align: right;
+    width: 17vw;
+    padding: 0 1vw;
+    background-color: white;
+  }
+}
+}
