--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -24,7 +24,8 @@ h3 {
 }
 
 p {
-  margin:0;
+  margin: 0;
+  height: 0;
   font-size: 1.5vh;
 }
 
@@ -97,23 +98,42 @@ p {
   display: flex;
   flex-direction: column;
   text-align: center;
-  width: 30vmin;
-  height: 30vmin;
-  padding: 2vmin 1vmin;
+  width: 30vh;
+  height: 30vh;
+  padding: 2vh 1vw;
   border-radius: 1vmax;
 }
 
 .card > i {
-  margin-bottom: 2vmin;
+  position: relative;
+  top: 4vh;
 }
 
 
 .card > h3 {
-  margin-top: 2vmin;
+  position: relative;
+  top: 10vh;
+}
+
+.card > p {
+  position: relative;
+  top: 10vh;
 }
 
 .card.merge {
-  background-color: coral;
+  background-color: lightcoral;
+}
+
+.card.split {
+  background-color: lightblue;
+}
+
+.card.compress {
+  background-color: lightgoldenrodyellow;
+}
+
+.card.convert {
+  background-color: lavender;
 }
 
 .footer {
@@ -127,6 +147,7 @@ p {
 @media (max-width: 700px) {
   .navbar {
     justify-content: space-between;
+    padding: 0.5vh 3vw;
   }
   .menu > a {
     display: none; 
@@ -134,6 +155,7 @@ p {
   .menu > i {
     display: block;
     margin-bottom: 2vh;
+    padding: 0 1.5vw;
   }
   .menu.responsive {
     flex-direction: column;
@@ -145,9 +167,16 @@ p {
   .menu.responsive > a {
     display: block;
     text-align: right;
-    width: 17vw;
-    padding: 0 1vw;
+    width: 25vw;
+    padding: 0.5vh 3vw;
     background-color: white;
   }
-}
+  .card {
+    height: 8vh;
+    flex-direction: row;
+    align-items: baseline;
+  }
+  .card > p {
+    display: none;
+  }
 }
