--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -123,7 +123,7 @@ input[type="file"] {
 
 .card > a:hover {
   color: crimson;
-  box-shadow: 0 0.2vh 0.4vh 0 rgba(0, 0, 0, 0.2), 0 0.4vh 1vh 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.2vh 0.8vh darkgray;
 }
 
 .card i {
@@ -185,12 +185,18 @@ input[type="file"] {
 .select {
   position: relative;
   top: 20%;
-  width: 60%;
-  height: 10%;
+  width: 35vh;
+  height: 10vh;
   border-radius: 1vmax;
   text-align: center;
   font-weight: bold;
-  padding-top: 2.5vh;
+  padding-top: 3vh;
+}
+
+.select:hover {
+  cursor: pointer;
+  box-shadow: 0 0.2vh 0.8vh darkgray;
+  color: crimson;
 }
 
 @media (max-width: 1000px) {
@@ -215,7 +221,7 @@ input[type="file"] {
     justify-content: flex-end;
     z-index: 1;
     background-color: white;
-    box-shadow: 0 0.2vh 0.4vh 0 rgba(0, 0, 0, 0.2), 0 0.4vh 1vh 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0.2vh 0.8vh darkgray;
   }
   .menu.responsive > a {
     display: block;
