--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -202,6 +202,17 @@ input[type="file"] {
   padding: 5vh 0;
 }
 
+.canvas div {
+  padding: 0.5vh;
+  margin: 0.5vh;
+  width: 60%;
+  height: 4%;
+  border: 1px solid crimson;
+  border-radius: 1vh;
+  overflow: hidden;
+  font-size: 1.5vh;
+}
+
 .action {
   position: relative;
   top: 90%;
