--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -213,6 +213,16 @@ input[type="file"] {
   font-size: 1.5vh;
 }
 
+.canvas a {
+  margin: 5vh;
+  padding: 2vh;
+  width: 20%;
+  height: 10%;
+  border-radius: 1vh;
+  text-align: center;
+  font-weight: bold;
+}
+
 .controls {
   display: flex;
   background-color: linen;
