--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -216,11 +216,12 @@ input[type="file"] {
 .canvas a {
   margin: 5vh;
   padding: 2vh;
-  width: 20%;
+  width: 40%;
   height: 10%;
   border-radius: 1vh;
   text-align: center;
   font-weight: bold;
+  font-size: 2vh;
 }
 
 .controls {
