--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -46,12 +46,16 @@ input[type="file"] {
   opacity: 0;
 }
 
+#add-selector {
+  width: 100%;
+}
+
 .navbar {
   display: flex;
   flex-direction: row;
   align-items: baseline;
   padding: 0.5vh 3vw;
-  height: 6vh;
+  height: 6%;
 }
 
 .menu {
@@ -199,20 +203,33 @@ input[type="file"] {
   background-color: linen;
   align-items: center;
   height: 80vh;
+  width: 100%;
   padding: 5vh;
+  overflow: auto;
 }
 
-.canvas div {
+.pdf {
   padding: 1vh;
-  margin: 1vh;
+  margin: 0 1vh;
   width: 15vh;
-  height: 20vh;
+  height: 30%;
   border: 1px solid crimson;
   border-radius: 1vh;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   font-size: 1.5vh;
+}
+
+.pdf-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  width: 15vh;
+  height: 2.5%;
+  visibility: hidden;
 }
 
 .canvas a {
@@ -320,8 +337,9 @@ input[type="file"] {
   background-color: black;
   color: white;
   padding: 1vh;
-  font-size: 1vh;
+  font-size: 1.5vh;
   border-radius: 1vh;
+  pointer-events: none;
 }
 
 @media (max-width: 1000px) {
